@@ -1,3 +1,10 @@
+2016-07-27  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>
+
+	* gcc.dg/torture/pr69352.c: Use  __INTPTR_TYPE__ instead of 
+	including stdint.h.
+	* gcc.dg/torture/pr71866.c: Use __UINTPTR_TYPE__ isntead of
+	including stdint.h.
+
 2016-07-26  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/71869
